spacing issue

--- a/css/characterCreation.css
+++ b/css/characterCreation.css
@@ -85,7 +85,7 @@ div.tab button.active {
     float: left;
     padding: 0px 12px;
     border: 1px solid #ccc;
-    width: 70%;
+    width: 82%;
     border-left: none;
     height: 313px;
     margin-top: .462em;
